src/modules/pages/components/RouteLayouts/UserNavigation.css
.main {
  display: inline-flex;
  align-items: center;
  text-align: left;
}

.elementWrapper {
  composes: flexContainerRow flexAlignCenter flexJustifyCenter from '~styles/layout.css';
  margin-right: 12px;
  padding: 1px 9px;
  height: 26px;
  position: relative;
  border-radius: var(--radius-normal);
  background-color: color-mod(var(--temp-grey-blue-7) alpha(10%));
  font-size: var(--size-smallish);
  line-height: 26px;
}

.notificationsButton {
  composes: button from '~styles/reset.css';
}

.notificationsIcon {
  flex-grow: 0;
  margin-right: 15px;
  padding: 9px;
  height: 36px;
  width: 36px;
  border-radius: 38px;
  text-align: center;
  cursor: pointer;
}

.notificationsIcon:hover {
  background-color: color-mod(var(--colony-blue) alpha(10%));
}

.notificationsIcon:hover svg {
  fill: var(--colony-blue);
  stroke: var(--colony-blue);
}

.notificationsIconActive svg {
  fill: var(--colony-blue);
  stroke: var(--colony-blue);
}

.notificationsHighlight {
  display: block;
  margin: -20px -4px 0 0;
  height: 9px;
  width: 9px;
  position: relative;
  float: right;
  border-radius: 50%;
  background-color: var(--pink);
  content: '';
  box-shadow: 0px 2px 11px var(--drop-shadow);
}

.connectWalletButton {
  margin-right: 25px;
  padding: 4px 9px 5px 9px;
  border: 1px solid var(--temp-grey-blue-7);
  border-radius: var(--radius-tiny);
  background-color: transparent;
  font-size: var(--size-smallish);
  font-weight: var(--weight-bold);
  color: var(--temp-grey-blue-7);
  cursor: pointer;
}

.connectWalletButton:hover {
  border-color: transparent;
  background-color: color-mod(var(--temp-grey-blue-7) alpha(25%));
  color: var(--colony-blue);
}

.connectWalletButtonActive {
  composes: connectWalletButton;
  border-color: transparent;
  background-color: color-mod(var(--temp-grey-blue-7) alpha(25%));
  color: var(--colony-blue);
}

.networkInfo {
  font-weight: var(--weight-bold);
  color: var(--grey-1);
  cursor: default;
}

.networkInfo:hover {
  background-color: color-mod(var(--colony-blue) alpha(10%));
  color: var(--colony-blue);
  cursor: pointer;
}

.wrongNetwork {
  composes: networkInfo;
  padding: 4px 10px;
  background-color: var(--danger);
  color: var(--colony-white);
}

.walletAddress {
  margin: 0;
  padding: 0 9px;
  height: 100%;
  position: relative;
  border: 1px solid transparent;
  border-radius: var(--radius-normal);
  background-color: color-mod(var(--temp-grey-blue-7) alpha(10%));
  color: var(--temp-grey-blue-7);
  cursor: pointer;
}

.walletAddress > span {
  line-height: 24px;
}

.walletAddress:hover {
  background-color: color-mod(var(--colony-blue) alpha(10%));
  color: var(--colony-blue);
}

.walletAddressActive {
  composes: walletAddress;
  border: 1px solid var(--colony-blue);
  color: var(--colony-blue);
}

.walletWrapper {
  padding: 1px;
}

.readyTransactionsCount {
  padding-top: 2px;
  height: 20px;
  min-width: 20px;
  position: absolute;
  top: -10px;
  right: -10px;
  border-radius: 50px;
  background-color: var(--pink);
  font-size: var(--size-tiny);
  font-weight: 600;
  text-align: center;
  color: var(--colony-white);
  box-shadow: 0px 2px 11px var(--drop-shadow);
}

.reputation:hover {
  background-color: color-mod(var(--colony-blue) alpha(10%));
  cursor: pointer;
}

/* The first selector is for the reputation value text when reputation shows `- %`
 * in the create colony wizard. The second one is for other reputation value texts.
*/
.reputation:hover div, .reputation:hover span {
  color: var(--colony-blue);
}

.reputation:hover svg {
  stroke: var(--colony-blue);
}

.walletAutoLogin {
  margin-right: 12px;
  padding: 4px 10px 0;
  height: 26px;
  border-radius: var(--radius-normal);
  background-color: color-mod(var(--temp-grey-blue-7) alpha(10%));
  text-align: center;
}

.walletAutoLogin h4 {
  display: inline-block;
  margin-top: 1px;
  margin-right: 10px;
  vertical-align: top;
  font-size: var(--size-tiny);
}

